RESOLVED FIXED 84016
[Qt] http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.html times out
https://bugs.webkit.org/show_bug.cgi?id=84016
Summary [Qt] http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.h...
Csaba Osztrogonác
Reported 2012-04-16 03:05:11 PDT
http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.html introduced in http://trac.webkit.org/changeset/114235 , but fails with timeout on Qt bots: --- /ramdisk/qt-linux-64-release/build/layout-test-results/http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404-actual.txt @@ -1,3 +1,4 @@ +FAIL: Timed out waiting for notifyDone to be called This tests the readyState of a XMLHttpRequset which is sent with a "HEAD" method to a not exist resource. -PASS +FAIL
Attachments
Patch (3.34 KB, patch)
2012-05-15 06:26 PDT, Jocelyn Turcotte
no flags
Csaba Osztrogonác
Comment 1 2012-04-16 03:13:59 PDT
Jocelyn Turcotte
Comment 2 2012-05-14 06:38:32 PDT
Was this easily reproducible? The test passes fine for me.
Jocelyn Turcotte
Comment 3 2012-05-14 06:39:19 PDT
(In reply to comment #2) > Was this easily reproducible? The test passes fine for me. Wait, wrong bug, please ignore.
Jocelyn Turcotte
Comment 4 2012-05-15 06:26:16 PDT
Simon Hausmann
Comment 5 2012-05-15 06:52:56 PDT
Comment on attachment 141947 [details] Patch Looks reasonable. This is touchy code, glad it's covered by a test :)
Simon Hausmann
Comment 6 2012-05-15 06:53:19 PDT
Comment on attachment 141947 [details] Patch Oops, forgot the r+.
Jocelyn Turcotte
Comment 7 2012-05-15 07:28:51 PDT
Comment on attachment 141947 [details] Patch Thx!
WebKit Review Bot
Comment 8 2012-05-15 08:33:27 PDT
Comment on attachment 141947 [details] Patch Clearing flags on attachment: 141947 Committed r117071: <http://trac.webkit.org/changeset/117071>
WebKit Review Bot
Comment 9 2012-05-15 08:33:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.