[Qt] http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.html times out https://bugs.webkit.org/show_bug.cgi?id=84016

Reviewed by Simon Hausmann.

Source/WebCore:

Calling didFail abort the connection and doesn't activate the HEADERS_RECEIVED state.
Since the goal of HEAD is to test then the request should be marked as finished
also in cases of HTTP errors.
This matches other ports behavior.

* platform/network/qt/QNetworkReplyHandler.cpp:
(WebCore::shouldIgnoreHttpError):

LayoutTests:

* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/104059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117071 268f45cc-cd09-0410-ab3c-d52691b4dbfc